# atlas-daos-benchmark

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  build.sh  cmake.in  metabuild.py  micro_benchmark_config.toml  run.sh
.github/workflows/: docker-image.yml  docker-publish.yml  release-tags.yml
bench/: benchmark_main.cxx
daos-dev/: Dockerfile
daos-dev/daos-patches/: dnf_install_dependencies_auto_confirm.patch
lib/daos-cxx/: CMakeLists.txt
lib/daos-cxx/include/: Array.h  Container.h  Errors.h  KeyValue.h  MockContainer.h  MockKeyValue.h  MockPool.h  Pool.h  UUID.h  interfaces.h  mocking.h
lib/daos-cxx/src/: Container.cxx  EventQueue.cxx  KeyValue.cxx  Pool.cxx  UUID.cxx
micro-bench/: CMakeLists.txt  benchmark_main.cxx
src/: Array.h  Container.cxx  Container.h  DAOSObject.cxx  DAOSObject.h  Errors.h  EventQueue.h  KeyValue.cxx  KeyValue.h  Pool.cxx  Pool.h  UUID.h  benchmark.cxx  timing.h  types.h
